# go-build-c-static-library

./: .gitignore  CMakeLists.txt  README.md  build.cmd  go.mod  sum.go
.github/workflows/: push.yml
src/: main.cpp
